--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
-  "name": "hackathon2-ecommerce",
+  "name": "hackathon-ecommerce",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-data": "node scripts/importSanityData.cjs"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@sanity/client": "^6.27.2",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.72.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dom": "^0.0.3",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.468.0",
-    "next": "14.2.15",
+    "next": "^15.1.6",
+    "next-auth": "^4.24.11",
+    "next-sanity": "^9.8.47",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "sanity": "^3.72.1",
+    "slugify": "^1.6.6",
+    "styled-components": "^6.1.14",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
